@@ -1,6 +1,6 @@
 // functions.cpp - MUX function handlers 
 //
-// $Id: functions.cpp,v 1.83 2002-02-02 04:39:03 sdennis Exp $
+// $Id: functions.cpp,v 1.84 2002-03-01 00:49:47 sdennis Exp $
 //
 
 #include "copyright.h"
@@ -6709,7 +6709,7 @@ FUN flist[] =
     {"STARTSECS",fun_startsecs,0,  0,          CA_PUBLIC},
     {"LFLAGS",   fun_lflags,   1,  0,          CA_PUBLIC},
     {"LATTRCMDS",fun_lattrcmds,1,  0,          CA_PUBLIC},
-    {"LCMDS",    fun_lcmds,    1,  0,          CA_PUBLIC},
+    {"LCMDS",    fun_lcmds,    1,  FN_VARARGS, CA_PUBLIC},
     {"CONNTOTAL",fun_conntotal,1,  0,          CA_PUBLIC},
     {"CONNMAX",  fun_connmax,  1,  0,          CA_PUBLIC},
     {"CONNLAST", fun_connlast, 1,  0,          CA_PUBLIC},
@@ -7376,48 +7376,99 @@ FUNCTION(fun_lattrcmds)
     }
     olist_pop();
 }
-
+ 
 // lcmds - Output a list of all $ commands on an object.
 // Altered from MUX lattr(). D.Piper - May 1997 & April 2000
+// Modified to handle spaced commands and ^-listens - July 2001 (Ash)
+// Applied patch and code reviewed - February 2002 (Stephen)
 //
 FUNCTION(fun_lcmds)
 {
-    dbref thing;
-    int ca, first;
-    ATTR *attr;
-
+    char sep;
+    if (  !fn_range_check("LCMDS", nfargs, 1, 3, buff, bufc)
+       || !delim_check(fargs, nfargs, 2, &sep, buff, bufc, 0, player, cause,
+                       cargs, ncargs, 1))
+    {
+        return;
+    }
+    
+    // Check to see what type of command matching we will do. '$' commands
+    // or '^' listens.  We default with '$' commands.
+    //
+    char cmd_type = '$';
+    if (  nfargs == 3
+        && (*fargs[2] == '$' || *fargs[2] == '^'))
+    {
+        cmd_type = *fargs[2];
+    }
+    
     // Check for wildcard matching.  parse_attrib_wild checks for read
     // permission, so we don't have to.  Have p_a_w assume the
     // slash-star if it is missing.
     //
-    first = 1;
+    dbref thing;
+    BOOL isFirst = TRUE;
     olist_push();
     if (parse_attrib_wild(player, fargs[0], &thing, 0, 0, 1))
     {
-        TINY_STRTOK_STATE tts;
-        Tiny_StrTokControl(&tts, " *:");
         char *buf = alloc_lbuf("fun_lattrcmds");
-        for (ca = olist_first(); ca != NOTHING; ca = olist_next())
+        dbref aowner;
+        int   aflags;
+        for (int ca = olist_first(); ca != NOTHING; ca = olist_next())
         {
-            attr = atr_num(ca);
+            ATTR *attr = atr_num(ca);
             if (attr)
             {
-                dbref aowner;
-                int   aflags;
                 atr_get_str(buf, thing, attr->number, &aowner, &aflags);
-                if (buf[0] == '$')
+                if (buf[0] == cmd_type)
                 {
-                    if (!first)
+                    BOOL isFound = FALSE;
+                    char *c_ptr = buf+1;
+                    
+                    // If there is no characters between the '$' or '^' and the
+                    // ':' it's not a valid command, so skip it.
+                    //
+                    if (*c_ptr != ':') 
                     {
-                        safe_chr(' ', buff, bufc);
+                        int isEscaped = FALSE;
+                        while (*c_ptr && !isFound) 
+                        {
+                            // We need to check if the ':' in the command is
+                            // escaped.
+                            //
+                            if (*c_ptr == '\\')
+                            {
+                                isEscaped = !isEscaped;
+                            }
+                            else if (*c_ptr == ':' && !isEscaped) 
+                            {
+                                isFound = TRUE;
+                                *c_ptr = '\0';
+                            }
+                            else if (*c_ptr != '\\' && isEscaped)
+                            {
+                                isEscaped = FALSE;
+                            }
+                            c_ptr++;
+                        }
                     }
-
-                    Tiny_StrTokString(&tts, buf+1);
-                    char *p = Tiny_StrTokParse(&tts);
-                    _strlwr(p);
-                    safe_str(p, buff, bufc);
-
-                    first = 0;
+                    
+                    // We don't want to bother printing out the $command
+                    // if it doesn't have a matching ':'.  It isn't a valid
+                    // command then.
+                    //
+                    if (isFound)
+                    {
+                        if (!isFirst)
+                        {
+                            print_sep(sep, buff, bufc);
+                        }
+                        
+                        _strlwr(buf);
+                        safe_str(buf+1, buff, bufc);
+                        
+                        isFirst = FALSE;
+                    }
                 }
             }
         }
